--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<html>
+    <title> Geometry Dash</title> 
+    <body style="text-align: center; background-color: springgreen"> 
+        <header style="background-color: steelblue">
+            <h1>Інформация про Geometry Dash </h1>
+        </header> 
+        
+        <main> 
+                <p>
+                    Geometry Dash (раніше — Geometry Jump) — незалежна аркадна відеогра, випущена в 2013 році. Розробником гри є Роберт Топала (також відомий як RobTop або RubRub), засновник компанії RobTop Games[4]. Geometry Dash створена на основі гри The Impossible Game. Гра підтримує як смартфони[5][6], так і персональні комп'ютери (платформа Steam)[7]. Гра містить 22 офіційні рівні (а також 4 у режимі платформеру, 1 таємний, 3 з Meltdown, 10 із World та 3 з SubZero) з унікальною фоновою музикою. Основне завдання гравця — за допомогою кубика та інших засобів дістатися кінця рівня, оминаючи перепони. Якщо гравець зіткнеться з перепоною, рівень починається спочатку. У грі також є редактор рівнів, доступний тільки в повній версії гри.
+                </p>
+            <h1 style="background-color: steelblue">Ґеймплей </h1>
+                <p>
+                    Ігровий процес в Geometry Dash сам по собі дуже простий. Гравцю потрібно натискати на сенсорний екран (на мобільному пристрої) або ліву клавішу миші, Пробіл або стрілку вгору (на ПК) і персонаж виконуватиме певні дії. Усі рівні (за винятком трьох — Clubstep, Theory of Everything 2 та Deadlocked) розблоковані з початку, тож їх можна проходити не за порядком. На шляху гравець може зібрати до трьох секретних монет на кожному офіційному рівні, які знаходяться у схованих або важкодоступних місцях. Також у грі є спеціальні сфери і портали, які дозволяють виконувати певні дії.
 
+                    Існують три режими гри: звичайний, платформер і режим практики.
+            </p>
+                <p>
+                    
+            </p>
+        </main> 
+    </body> 
+</html>
