--- a/index.html
+++ b/index.html
@@ -9,15 +9,39 @@
                 <p>
                     Geometry Dash (раніше — Geometry Jump) — незалежна аркадна відеогра, випущена в 2013 році. Розробником гри є Роберт Топала (також відомий як RobTop або RubRub), засновник компанії RobTop Games[4]. Geometry Dash створена на основі гри The Impossible Game. Гра підтримує як смартфони[5][6], так і персональні комп'ютери (платформа Steam)[7]. Гра містить 22 офіційні рівні (а також 4 у режимі платформеру, 1 таємний, 3 з Meltdown, 10 із World та 3 з SubZero) з унікальною фоновою музикою. Основне завдання гравця — за допомогою кубика та інших засобів дістатися кінця рівня, оминаючи перепони. Якщо гравець зіткнеться з перепоною, рівень починається спочатку. У грі також є редактор рівнів, доступний тільки в повній версії гри.
                 </p>
+                <img src="https://upload.wikimedia.org/wikipedia/uk/thumb/6/61/Geometry_Dash_Logo.png/250px-Geometry_Dash_Logo.png">
             <h1 style="background-color: steelblue">Ґеймплей </h1>
                 <p>
                     Ігровий процес в Geometry Dash сам по собі дуже простий. Гравцю потрібно натискати на сенсорний екран (на мобільному пристрої) або ліву клавішу миші, Пробіл або стрілку вгору (на ПК) і персонаж виконуватиме певні дії. Усі рівні (за винятком трьох — Clubstep, Theory of Everything 2 та Deadlocked) розблоковані з початку, тож їх можна проходити не за порядком. На шляху гравець може зібрати до трьох секретних монет на кожному офіційному рівні, які знаходяться у схованих або важкодоступних місцях. Також у грі є спеціальні сфери і портали, які дозволяють виконувати певні дії.
 
                     Існують три режими гри: звичайний, платформер і режим практики.
             </p>
+            <h1 style="background-color: steelblue">Режим практики </h1>
                 <p>
-                    
+                    Цей режим призначений допомогти гравцям краще пізнати планування рівня, під час якого вони не будуть змушені проходити рівень з самого початку у випадку смерті. Замість цього вони можуть розміщувати контрольні точки, відмічені зеленими самоцвітами. Завдяки ним, після смерті гравець з’являється на місці останнього поставленого кристалу.
+
+                    Також режим практики за замовчуванням має власний саундтрек: Stay Inside Me [Архівовано 28 липня 2018 у Wayback Machine.].
             </p>
+            <h1 style="background-color: steelblue">Нагороди </h1>
+            <p>
+                За проходження рівнів і виконання певних умов гравець може отримати певні нагороди:
+
+                Зірки (англ. Stars)<br>
+                Місяці (Moons)<br>
+                Секретні монети (Secret Coins)<br>
+                Користувацькі монети (User Coins)<br>
+                Орби (Mana Orbs)<br>
+                Діаманти (Diamonds)[8]<br>
+                Ключі (Keys)<br>
+                Демонічні ключі (Demon Keys)<br>
+                Уламки сили (Shards of Power)<br>
+                Демонічні рівні, «демони» (Demon Levels, Demons)<br>
+            </p>
+            <h1 style="background-color: steelblue">Персонаж </h1>
+            <p>
+                Персонаж — керований користувачем куб або інший об'єкт. Для управління ним достатньо натискати кнопки вгору, Пробіл, ліву кнопку миші або натискати по екрану.
+            </p>
+            <a href="https://uk.wikipedia.org/wiki/Geometry_Dash">Більше інформаії</a>
         </main> 
     </body> 
 </html>
